--- a/2. 개발/FreSearch/src/main/webapp/resources/css/header.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/header.css
@@ -42,6 +42,14 @@
   font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
 }
 
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-family: 'Noto Sans CJK', AppleSDGothicNeo, 'Malgun Gothic', arial;
+}
+
 .dropdown-content p {
   color: black;
   padding: 12px 16px;
